--- a/Home/home.html
+++ b/Home/home.html
@@ -292,7 +292,7 @@
   <footer class="footer-section">
     <div class="container-1">
       <a>
-        <h2>Dream bHouse</h2>
+        <h2>Dream House</h2>
       </a>
       <p>Turn your Dream into Addresses with Us.</p>
       <ul class="social-links">
