Changes done in footer and landing page media query

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 and find the one that fits your lifestyle
             </p>
             <div id="search-bar">
-                <button id="submit-btn" class="btn" onclick="
+                <button id="search-btn" class="btn" onclick="
                     openSearchPage()">Search Property</a>
             </div>
         </div>
@@ -76,15 +76,6 @@
             </div>
 
             <div id="cards-container">
-                <div class="card" id="card1">
-                    <a href="Home/home.html">
-                        <div class="overlay">
-                            <h4>Sell property</h4>
-                            <p>Trust DreamHouse to market your property effectively, negotiate the best price, and
-                                manage the complexities of the selling process with precision and care.</p>
-                        </div>
-                    </a>
-                </div>
                 <div class="card" id="card2">
                     <a href="propertylisting/search.html">
                         <div class="overlay">
@@ -97,6 +88,17 @@
                         </div>
                     </a>
                 </div>
+                
+                <div class="card" id="card1">
+                    <a href="Home/home.html">
+                        <div class="overlay">
+                            <h4>Sell property</h4>
+                            <p>Trust DreamHouse to market your property effectively, negotiate the best price, and
+                                manage the complexities of the selling process with precision and care.</p>
+                        </div>
+                    </a>
+                </div>
+
                 <div class="card" id="card3">
                     <a href="propertylisting/search.html">
                         <div class="overlay">
@@ -124,8 +126,8 @@
                 <ul class="social-links">
                     <li><a href="Your FaceBook Profile address"><img src="assets/icon/instagram.png"
                                 height="25px"></a></li>
-                    <li><a href="Your Insta Profile address"><img src="assets/icon/facebook.png" height="25px"></a>
-                    </li>
+                    <li><a href="Your Insta Profile address"><img src="assets/icon/facebook.png" height="25px"></a></li>
+                    
                     <li><a href="Your Linkedln profile address"><img src="assets/icon/linkedin (1).png"
                                 height="25px"></a></li>
                     <li><a href="Your Twitter profile address"><img src="assets/icon/twitter (1).png"
